--- a/src/components/Chart.module.css
+++ b/src/components/Chart.module.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     backdrop-filter: blur(3px);
+    margin: auto;
 
 }
 
@@ -22,4 +23,36 @@
     text-align: center;
     margin: 30px 0 0 30px;
     
+}
+
+.chart{
+    width: 800px;
+    margin: auto;
+    padding: 20px;
+    margin-top: 50px;
+    background-color: #18181ce6;
+    border: 2px solid #404042;
+    border-radius: 20px;
+}
+
+.graph{
+    width: 760px;
+    height: 300px;
+}
+
+.name{
+    display: flex;
+    align-items: center;
+    margin: 0 10px 30px;
+}
+
+.name img{
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+}
+
+.name p{
+    font-size: 1.5rem;
+    font-weight: 700;
 }
