--- a/src/components/Chart.module.css
+++ b/src/components/Chart.module.css
@@ -56,3 +56,35 @@
     font-size: 1.5rem;
     font-weight: 700;
 }
+
+.types button{
+    margin: 10px 20px;
+    background-color: #18181ce6;
+    border: 1px solid #3874ff;
+    color: #3874ff;
+    font-size: 1rem;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.types .selected{
+    background-color: #3874ff;
+    color: #fff;
+}
+
+.details{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 20px 0;
+}
+.details div{
+    display: flex;
+    font-size: 1.1rem;
+}
+
+.details p{
+    margin-right: 7px;
+    color: #3874ff;
+    font-weight: 700;
+}
